[package]
name = "compatctl"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0", features = ["Devices_Sensors"] }
tokio = { version = "1", features = ["full"] }
vigem-client = { git = "https://github.com/Originalimoc/vigem-sdk-mc", rev = "383e350", features = ["unstable_xtarget_notification"] }
rusty-xinput = { git = "https://github.com/Originalimoc/rusty-xinput-ex", rev = "531d3a0" }
nalgebra = "0.33"
once_cell = "1.20"
quanta = "0.12"

#env_logger = "0.10"
#vigem = { git = "https://github.com/TheRadioGuy/vigem" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
